Added root to routes

--- a/config/database.yml
+++ b/config/database.yml
@@ -82,4 +82,5 @@ production:
   <<: *default
   database: seeks_production
   username: ubuntu
-  password: <%= ENV['SEEKS_DATABASE_PASSWORD'] %>
+  password:
+    # <%= ENV['SEEKS_DATABASE_PASSWORD'] %>
